desenv_tests/test-assets/field/failure/nested_not_used_on_desenv_type.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(nested)]
    field: String
}

fn main(){}